--- a/styles.css
+++ b/styles.css
@@ -7,4 +7,8 @@
     left: 50%;
     transform: translate(-50%, -50%);
 }
-  
+
+.announced {
+    color: red;
+    text-decoration: line-through;
+}
