--- a/styles.css
+++ b/styles.css
@@ -1,14 +1,52 @@
-.number-announcer {
-    margin-top: 10px;
-    font-size: 2em;
-    text-align: center;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+body{
+    height: 100%;
+    width: 100%;
+    display: flex;
+    place-items: center;
 }
 
-.announced {
-    color: red;
-    text-decoration: line-through;
+.container{
+    display: grid;
+    align-items: center;
+    justify-content: center;
+    padding: 20px;
+    margin: 20px;
+    text-align: center;
+}
+
+.form{
+    margin: 20px;
+}
+
+#btn-submit{
+    margin-top: 20px;
+}
+
+.box{
+    display: flex;
+    background: white;
+    padding: 20px;
+    border-radius: 5px;
+    box-shadow: 0px 0px 5px rgba(0,0,0,0.1);
+    width: 100%;
+}
+
+.box .slider{
+    width: 100%;
+    height: 100%;
+    margin-right: 10px;
+}
+
+.box .slider input{
+    appearance: none;
+    outline: none;
+    background: #f2f2f2;
+    border-radius: 25px;
+    box-shadow: inset 0px 0px 4px rgba(101, 101, 101, 0.1);
+}
+
+.box .value{
+    font-size: 20px;
+    font-weight: 450;
+    text-align: center;
 }
