--- a/style2.css
+++ b/style2.css
@@ -31,3 +31,12 @@ form{
     color: red;
     text-decoration: line-through;
 }
+
+.cards{
+    margin-top: 40px;
+    padding: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
