--- a/style2.css
+++ b/style2.css
@@ -36,7 +36,20 @@ form{
     margin-top: 40px;
     padding: 40px;
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
     align-items: center;
     text-align: center;
 }
+
+th, td {
+    font-family: Helvetica;
+    padding: 20px;
+    text-align: center;
+    border: 3px solid black;
+    width: 20%;
+  }
+
+  .bingo-card{
+    margin: 20px;
+  }
